# prueba-tecnica-rauda

./: .env.template  .gitignore  README.md  pyproject.toml
data/processed/: tickets_evaluated.csv
src/: main.py
src/llm/: agent.py  prompts.py  schemas.py
