[tool.poetry]
name = "prueba-tecnica-rauda"
version = "0.1.0"
description = ""
authors = ["Miguel Amato <miamato@ucm.es>"]
readme = "README.md"
packages = [{include = "llm", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
openai = ">=1.66.3,<2.0.0"
dotenv = ">=0.9.9,<0.10.0"
pandas = ">=2.2.3,<3.0.0"
pytest = ">=8.3.5,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
